# record_tracker

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements.txt
config/: .env  settings.py  urls.py
record/: models.py  permissions.py  serializers.py  urls.py  views.py
record/migrations/: 0001_initial.py  0002_remove_record_date_added.py
templates/: _base.html
templates/pages/: create_record.html  delete_record.html  home.html  record_detail.html  record_list.html  update_record.html
