[tool.poetry]
name = "record_tracker"
version = "0.1.0"
description = ""
authors = ["mhendricks96 <mhendricks96@yahoo.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
django-allauth = "^0.45.0"
django-crispy-forms = "^1.12.0"
django-debug-toolbar = "^3.2.2"
whitenoise = "^5.3.0"
django-environ = "^0.5.0"
gunicorn = "^20.1.0"
django-cors-headers = "^3.8.0"
djangorestframework-simplejwt = "^4.8.0"
djangorestframework = "^3.12.4"
psycopg2-binary = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
